<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageRegistration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/foreground_design"
        android:scaleType="center"
        app:srcCompat="@drawable/background"
        tools:layout_editor_absoluteX="-59dp"
        tools:layout_editor_absoluteY="28dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="253dp"
        android:layout_height="71dp"
        android:fontFamily="@font/lobster"
        android:text="@string/ratatouille"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageRegistration"
        app:layout_constraintVertical_bias="0.131" />

    <TextView
        android:id="@+id/tagline"
        android:layout_width="114dp"
        android:layout_height="47dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageRegistration"
        app:layout_constraintVertical_bias="0.258" />

    <EditText
        android:id="@+id/et_Email"
        android:layout_width="331dp"
        android:layout_height="48dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="13dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="@+id/imageRegistration"
        app:layout_constraintTop_toBottomOf="@+id/tagline"
        app:layout_constraintVertical_bias="0.113" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="331dp"
        android:layout_height="48dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_key_24"
        android:drawablePadding="13dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="@+id/imageRegistration"
        app:layout_constraintTop_toBottomOf="@+id/tagline"
        app:layout_constraintVertical_bias="0.232" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="263dp"
        android:layout_height="59dp"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageRegistration"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855" />

    <TextView
        android:id="@+id/question"
        android:layout_width="330dp"
        android:layout_height="52dp"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="Don't have an account?"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageRegistration"
        app:layout_constraintVertical_bias="0.929" />

    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="112dp"
        android:layout_height="51dp"
        android:fontFamily="sans-serif"
        android:onClick="signup"
        android:padding="10dp"
        android:text="SignUp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageRegistration"
        app:layout_constraintVertical_bias="0.927"
        tools:ignore="OnClick" />

</androidx.constraintlayout.widget.ConstraintLayout>